--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
-    "name": "hive-social",
+    "name": "hive-social-app",
     "version": "1.0.0",
+    "description": "Hive Social Application with Google OAuth and PostgreSQL",
+    "main": "index.js",
     "scripts": {
-        "start": "node index.js"
+        "start": "node index.js",
+        "dev": "nodemon index.js"
     },
+    "keywords": [],
+    "author": "Your Name",
+    "license": "ISC",
     "dependencies": {
+        "axios": "^1.5.0",
         "dotenv": "^16.0.0",
         "express": "^4.18.2",
-        "firebase-admin": "^11.5.0",
+        "express-session": "^1.18.1",
         "google-auth-library": "^8.7.0",
-        "pg": "^8.13.1"
+        "pg": "^8.10.0"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.22"
     }
 }
