--- a/package.json
+++ b/package.json
@@ -4,22 +4,23 @@
     "description": "Hive Social Application with Google OAuth and PostgreSQL",
     "main": "index.js",
     "scripts": {
-      "start": "node index.js",
-      "dev": "nodemon index.js"
+        "start": "node index.js",
+        "dev": "nodemon index.js"
     },
     "keywords": [],
     "author": "Your Name",
     "license": "ISC",
     "dependencies": {
-      "axios": "^1.5.0",
-      "dotenv": "^16.0.0",
-      "express": "^4.18.2",
-      "express-session": "^1.17.3",
-      "google-auth-library": "^8.7.0",
-      "pg": "^8.10.0"
+        "axios": "^1.5.0",
+        "dotenv": "^16.0.0",
+        "express": "^4.21.2",
+        "express-session": "^1.18.1",
+        "google-auth-library": "^8.7.0",
+        "passport": "^0.7.0",
+        "passport-google-oauth20": "^2.0.0",
+        "pg": "^8.10.0"
     },
     "devDependencies": {
-      "nodemon": "^2.0.22"
+        "nodemon": "^2.0.22"
     }
-  }
-  
+}
